Fixed searchbar hiding behind TitlePanel component

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,10 @@ a {
   background-color: #81C784;
 }
 
+.white-bg {
+  background-color: #ffffff;
+}
+
 .dark-bg {
   background-color: #263238;
 }
